# Quantifying-the-Illicit-Ecosystem-of-Betting-Apps-in-India

./: .gitattributes  README.md  pyproject.toml
data/: keywords.yml
data analysis/: README.md
data analysis/annotation ui/: gallery.html  index.html  server.py  validate_gemini.html
data analysis/few shot classification/: classify.py
data analysis/topic modelling/: bert_topic_modelling.ipynb
data collection/: README.md
data collection/google playstore reviews/: collect_reviews.py
data collection/instagram/: collect_posts_per_hashtag.ipynb  download_images.ipynb
data/google playstore app reviews/: 180score_football_predictions.csv  4rabet.csv  88_fortunes_casino_slot_games.csv  ai_sports_betting_betsmartai.csv  allcric_cricket_predictions.csv  betcode.csv  betgpt_betting_tips.csv  betting_tips.csv  billionaire_casino_slots_777.csv  bingo_frenzylive_bingo_games.csv  blackjack_21_blackjackist.csv  bravo_casino_cash_slots_games.csv  cash_club_casino_vegas_slots.csv  cash_frenzy_casino_slots.csv  cash_hoard_slotscasino_slots.csv  cash_tornado_slots_casino.csv  casino_deluxe_vegas.csv  casino_roulette_roulettist.csv  casino_simulator_store_manager.csv  colour_prediction_calculator.csv  copa_football_predictions.csv  daily_football_betting_tips.csv  double_win_slots_vegas_casino.csv  doubleu_casino_vegas_slots.csv  footbe_betting_tips.csv  gold_fish_casino_slot_games.csv  grand_vegas_slots_casino_games.csv  heroes_of_history_epic_empire.csv  huuuge_casino_777_slots_games.csv  jackpot_crush_casino_slots.csv  jackpot_master_slots_casino.csv  numbers_roulette.csv  (+25 more)
(+58 files in other folders)
